[package]
authors = ["Ritvik Nag <rv.kvetch@gmail.com>"]
description = "Increments the version number of the current project. I've forked this because the original version was not ideal."
keywords = ["cargo", "version", "bump"]
license = "ISC"
name = "cargo-bump"
readme = "README.md"
repository = "https://github.com/rnag/cargo-bump"
version = "1.1.0"

[dependencies]
clap = "2.26.0"
semver = "0.9.0"
toml_edit = "0.1.3"
cargo_metadata = "0.7.0"
